# ai_sandbox

./: .gitignore  Dockerfile.slurm  README.md  development_phases.md  docker-compose.yml  docker-entrypoint.sh  flake.nix  main.ipynb  pyproject.toml
data/: resume.sh  slurm.conf  suspend.sh
data/examples/: hello.py  matrix_local.py  matrix_setup.py  matrix_worker.py  parallel.py  run_hello.sh  run_matrix.sh  run_parallel.sh  run_sleep.sh  sleep_local.py  sleep_test.sh  sleep_worker.py
src/: __init__.py  base.py  generator.py  validator.py
storage/public/containers/: jupyterlab.def
