[project]
name = "ai-sandbox"
version = "0.1.0"
description = "AI Course Sandbox Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
